// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for dataExtraction document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for exceptionalQueue document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for failed document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for identification document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for imagePreprocessing document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for new document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for parsing document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for postponed document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for postprocessing document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for preprocessing document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for unification document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for validation document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with Empty for empty extracted data and for versionIdentification document state 1`] = `
<NoData
  description={
    <React.Fragment>
      Please, wait while data extraction is in progress
      <ExtractedDataTabsstyles__SpinWrapper>
        <CenteredSpin
          spinning={true}
        />
      </ExtractedDataTabsstyles__SpinWrapper>
    </React.Fragment>
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with pages grouping 1`] = `
<ExtractedDataTabsstyles__StyledTabs
  activeKey="1"
  animated={false}
  extra={
    <ExtractedDataTabsstyles__Extra>
      <ConfidenceLevelDropdown
        getPopupContainer={[Function]}
      />
      <FieldTypeFilterDropdown
        getPopupContainer={[Function]}
      />
      <ViewSwitcher />
    </ExtractedDataTabsstyles__Extra>
  }
  onChange={[MockFunction]}
  tabs={
    Array [
      Tab {
        "children": <DocumentFields
          fields={
            Array [
              ExtractedDataField {
                "data": TableData {
                  "cells": Array [],
                  "columns": Array [],
                  "coordinates": Object {
                    "h": 0.4,
                    "page": 2,
                    "w": 0.3,
                    "x": 0.1,
                    "y": 0.2,
                  },
                  "meta": null,
                  "paginatedRows": null,
                  "rows": Array [],
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.4,
                          "w": 0.3,
                          "x": 0.1,
                          "y": 0.2,
                        },
                      ],
                      "page": 1,
                      "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "tableCoordinates": null,
                },
                "fieldPk": 0,
              },
              ExtractedDataField {
                "data": FieldData {
                  "confidence": 0.69,
                  "coordinates": FieldCoordinates {
                    "h": 0.26,
                    "page": 1,
                    "w": 0.23,
                    "x": 0.1,
                    "y": 0.2,
                  },
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.26,
                          "w": 0.23,
                          "x": 0.1,
                          "y": 0.2,
                        },
                      ],
                      "page": 1,
                      "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "sourceTextCoordinates": null,
                  "tableCoordinates": null,
                  "value": 350,
                },
                "fieldPk": 1,
                "modifiedBy": "Mick Duo",
              },
              ExtractedDataField {
                "data": TableData {
                  "cells": Array [],
                  "columns": Array [],
                  "coordinates": Object {
                    "h": 0.1,
                    "page": 1,
                    "w": 0.1,
                    "x": 0.1,
                    "y": 0.1,
                  },
                  "meta": null,
                  "paginatedRows": null,
                  "rows": Array [],
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.1,
                          "w": 0.1,
                          "x": 0.1,
                          "y": 0,
                        },
                      ],
                      "page": 1,
                      "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "tableCoordinates": null,
                },
                "fieldPk": 3,
              },
            ]
          }
        />,
        "hiddenPane": false,
        "key": "1",
        "label": <span
          onClick={[Function]}
        >
          Page 1
        </span>,
      },
      Tab {
        "children": <DocumentFields
          fields={
            Array [
              ExtractedDataField {
                "data": FieldData {
                  "confidence": 0.8,
                  "coordinates": FieldCoordinates {
                    "h": 0.1,
                    "page": 2,
                    "w": 0.1,
                    "x": 0.1,
                    "y": 0.1,
                  },
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.1,
                          "w": 0.1,
                          "x": 0.1,
                          "y": 0.1,
                        },
                      ],
                      "page": 1,
                      "sourceId": "dadasdqe",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "sourceTextCoordinates": null,
                  "tableCoordinates": null,
                  "value": "mock value",
                },
                "fieldPk": 2,
              },
            ]
          }
        />,
        "hiddenPane": false,
        "key": "2",
        "label": <span
          onClick={[Function]}
        >
          Page 2
        </span>,
      },
    ]
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with set index grouping 1`] = `
<ExtractedDataTabsstyles__StyledTabs
  activeKey="without_field_set"
  animated={false}
  extra={
    <ExtractedDataTabsstyles__Extra>
      <ConfidenceLevelDropdown
        getPopupContainer={[Function]}
      />
      <FieldTypeFilterDropdown
        getPopupContainer={[Function]}
      />
      <ViewSwitcher />
    </ExtractedDataTabsstyles__Extra>
  }
  onChange={[MockFunction]}
  tabs={
    Array [
      Tab {
        "children": <DocumentFields
          fields={
            Array [
              ExtractedDataField {
                "data": TableData {
                  "cells": Array [],
                  "columns": Array [],
                  "coordinates": Object {
                    "h": 0.4,
                    "page": 2,
                    "w": 0.3,
                    "x": 0.1,
                    "y": 0.2,
                  },
                  "meta": null,
                  "paginatedRows": null,
                  "rows": Array [],
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.4,
                          "w": 0.3,
                          "x": 0.1,
                          "y": 0.2,
                        },
                      ],
                      "page": 1,
                      "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "tableCoordinates": null,
                },
                "fieldPk": 0,
              },
              ExtractedDataField {
                "data": FieldData {
                  "confidence": 0.69,
                  "coordinates": FieldCoordinates {
                    "h": 0.26,
                    "page": 1,
                    "w": 0.23,
                    "x": 0.1,
                    "y": 0.2,
                  },
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.26,
                          "w": 0.23,
                          "x": 0.1,
                          "y": 0.2,
                        },
                      ],
                      "page": 1,
                      "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "sourceTextCoordinates": null,
                  "tableCoordinates": null,
                  "value": 350,
                },
                "fieldPk": 1,
                "modifiedBy": "Mick Duo",
              },
              ExtractedDataField {
                "data": FieldData {
                  "confidence": 0.8,
                  "coordinates": FieldCoordinates {
                    "h": 0.1,
                    "page": 2,
                    "w": 0.1,
                    "x": 0.1,
                    "y": 0.1,
                  },
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.1,
                          "w": 0.1,
                          "x": 0.1,
                          "y": 0.1,
                        },
                      ],
                      "page": 1,
                      "sourceId": "dadasdqe",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "sourceTextCoordinates": null,
                  "tableCoordinates": null,
                  "value": "mock value",
                },
                "fieldPk": 2,
              },
              ExtractedDataField {
                "data": TableData {
                  "cells": Array [],
                  "columns": Array [],
                  "coordinates": Object {
                    "h": 0.1,
                    "page": 1,
                    "w": 0.1,
                    "x": 0.1,
                    "y": 0.1,
                  },
                  "meta": null,
                  "paginatedRows": null,
                  "rows": Array [],
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.1,
                          "w": 0.1,
                          "x": 0.1,
                          "y": 0,
                        },
                      ],
                      "page": 1,
                      "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "tableCoordinates": null,
                },
                "fieldPk": 3,
              },
            ]
          }
        />,
        "hiddenPane": false,
        "key": "without_field_set",
        "label": "Without field set",
      },
    ]
  }
/>
`;

exports[`Container: ExtractedDataTabs component should render correct layout with user defined grouping 1`] = `
<ExtractedDataTabsstyles__StyledTabs
  activeKey="fields"
  animated={false}
  extra={
    <ExtractedDataTabsstyles__Extra>
      <ConfidenceLevelDropdown
        getPopupContainer={[Function]}
      />
      <FieldTypeFilterDropdown
        getPopupContainer={[Function]}
      />
      <ViewSwitcher />
    </ExtractedDataTabsstyles__Extra>
  }
  onChange={[MockFunction]}
  tabs={
    Array [
      Tab {
        "children": <DocumentFields
          fields={
            Array [
              ExtractedDataField {
                "data": TableData {
                  "cells": Array [],
                  "columns": Array [],
                  "coordinates": Object {
                    "h": 0.4,
                    "page": 2,
                    "w": 0.3,
                    "x": 0.1,
                    "y": 0.2,
                  },
                  "meta": null,
                  "paginatedRows": null,
                  "rows": Array [],
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.4,
                          "w": 0.3,
                          "x": 0.1,
                          "y": 0.2,
                        },
                      ],
                      "page": 1,
                      "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "tableCoordinates": null,
                },
                "fieldPk": 0,
              },
              ExtractedDataField {
                "data": FieldData {
                  "confidence": 0.69,
                  "coordinates": FieldCoordinates {
                    "h": 0.26,
                    "page": 1,
                    "w": 0.23,
                    "x": 0.1,
                    "y": 0.2,
                  },
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.26,
                          "w": 0.23,
                          "x": 0.1,
                          "y": 0.2,
                        },
                      ],
                      "page": 1,
                      "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "sourceTextCoordinates": null,
                  "tableCoordinates": null,
                  "value": 350,
                },
                "fieldPk": 1,
                "modifiedBy": "Mick Duo",
              },
              ExtractedDataField {
                "data": FieldData {
                  "confidence": 0.8,
                  "coordinates": FieldCoordinates {
                    "h": 0.1,
                    "page": 2,
                    "w": 0.1,
                    "x": 0.1,
                    "y": 0.1,
                  },
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.1,
                          "w": 0.1,
                          "x": 0.1,
                          "y": 0.1,
                        },
                      ],
                      "page": 1,
                      "sourceId": "dadasdqe",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "sourceTextCoordinates": null,
                  "tableCoordinates": null,
                  "value": "mock value",
                },
                "fieldPk": 2,
              },
              ExtractedDataField {
                "data": TableData {
                  "cells": Array [],
                  "columns": Array [],
                  "coordinates": Object {
                    "h": 0.1,
                    "page": 1,
                    "w": 0.1,
                    "x": 0.1,
                    "y": 0.1,
                  },
                  "meta": null,
                  "paginatedRows": null,
                  "rows": Array [],
                  "setIndex": null,
                  "sourceBboxCoordinates": Array [
                    SourceBboxCoordinates {
                      "bboxes": Array [
                        Rect {
                          "h": 0.1,
                          "w": 0.1,
                          "x": 0.1,
                          "y": 0,
                        },
                      ],
                      "page": 1,
                      "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
                    },
                  ],
                  "sourceTableCoordinates": null,
                  "tableCoordinates": null,
                },
                "fieldPk": 3,
              },
            ]
          }
        />,
        "hiddenPane": false,
        "key": "fields",
        "label": "Fields",
      },
    ]
  }
/>
`;

exports[`Container: ExtractedDataTabs mapStateToProps should create correct state props object 1`] = `
Object {
  "activeTab": 42,
  "document": Document {
    "_id": "mockId",
    "communication": Object {
      "comments": Array [
        Comment {
          "createdAt": "2018-09-03T09:34:24.249",
          "createdBy": "user-uuid",
          "text": "hello comment text",
        },
      ],
    },
    "containerMetadata": null,
    "containerType": null,
    "date": "2021-07-02T10:00:24.200662+00:00",
    "documentLayout": DocumentLayout {
      "id": "documentLayoutId",
      "pages": Array [
        PageLayout {
          "id": "page_1_id",
          "images": Array [],
          "keyValuePairs": Array [
            KeyValuePairLayout {
              "confidence": 0,
              "id": "mockId",
              "key": KeyValuePairElementLayout {
                "content": "keyContent",
                "polygon": Array [
                  Point {
                    "x": 0.111,
                    "y": 0.222,
                  },
                  Point {
                    "x": 0.333,
                    "y": 0.444,
                  },
                ],
              },
              "value": KeyValuePairElementLayout {
                "content": "valueContent",
                "polygon": Array [
                  Point {
                    "x": 0.731,
                    "y": 0.456,
                  },
                  Point {
                    "x": 0.123,
                    "y": 0.234,
                  },
                ],
              },
            },
          ],
          "pageNumber": 1,
          "paragraphs": Array [
            ParagraphLayout {
              "confidence": 0,
              "content": "content",
              "id": "mockId",
              "lines": Array [
                LineLayout {
                  "confidence": 0,
                  "content": "content",
                  "order": 1,
                  "polygon": Array [
                    Point {
                      "x": 0.751,
                      "y": 0.812,
                    },
                    Point {
                      "x": 0.523,
                      "y": 0.954,
                    },
                    Point {
                      "x": 0.651,
                      "y": 0.512,
                    },
                    Point {
                      "x": 0.423,
                      "y": 0.454,
                    },
                  ],
                },
              ],
              "order": 1,
              "polygon": Array [
                Point {
                  "x": 0.751,
                  "y": 0.812,
                },
                Point {
                  "x": 0.523,
                  "y": 0.954,
                },
                Point {
                  "x": 0.651,
                  "y": 0.512,
                },
                Point {
                  "x": 0.423,
                  "y": 0.454,
                },
              ],
              "role": "role",
            },
          ],
          "parsingType": "AWS_TEXTRACT",
          "tables": Array [
            TableLayout {
              "cells": Array [
                TableCellLayout {
                  "columnIndex": 0,
                  "columnSpan": 1,
                  "content": "cell",
                  "kind": "kind",
                  "polygon": Array [
                    Point {
                      "x": 0.111,
                      "y": 0.222,
                    },
                    Point {
                      "x": 0.333,
                      "y": 0.444,
                    },
                  ],
                  "rowIndex": 0,
                  "rowSpan": 1,
                },
              ],
              "columnCount": 1,
              "confidence": 0,
              "id": "mockTableId",
              "order": 1,
              "polygon": Array [
                Point {
                  "x": 0.111,
                  "y": 0.222,
                },
                Point {
                  "x": 0.333,
                  "y": 0.444,
                },
              ],
              "rowCount": 1,
            },
          ],
        },
      ],
      "tenantId": "tenantId",
    },
    "documentType": PreviewEntity {
      "code": "docType",
      "name": "Document Type Name",
    },
    "engine": "TESSERACT",
    "error": null,
    "extractedData": Array [
      ExtractedDataField {
        "data": TableData {
          "cells": Array [],
          "columns": Array [],
          "coordinates": Object {
            "h": 0.4,
            "page": 2,
            "w": 0.3,
            "x": 0.1,
            "y": 0.2,
          },
          "meta": null,
          "paginatedRows": null,
          "rows": Array [],
          "setIndex": null,
          "sourceBboxCoordinates": Array [
            SourceBboxCoordinates {
              "bboxes": Array [
                Rect {
                  "h": 0.4,
                  "w": 0.3,
                  "x": 0.1,
                  "y": 0.2,
                },
              ],
              "page": 1,
              "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
            },
          ],
          "sourceTableCoordinates": null,
          "tableCoordinates": null,
        },
        "fieldPk": 0,
      },
      ExtractedDataField {
        "data": FieldData {
          "confidence": 0.69,
          "coordinates": FieldCoordinates {
            "h": 0.26,
            "page": 1,
            "w": 0.23,
            "x": 0.1,
            "y": 0.2,
          },
          "setIndex": null,
          "sourceBboxCoordinates": Array [
            SourceBboxCoordinates {
              "bboxes": Array [
                Rect {
                  "h": 0.26,
                  "w": 0.23,
                  "x": 0.1,
                  "y": 0.2,
                },
              ],
              "page": 1,
              "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
            },
          ],
          "sourceTableCoordinates": null,
          "sourceTextCoordinates": null,
          "tableCoordinates": null,
          "value": 350,
        },
        "fieldPk": 1,
        "modifiedBy": "Mick Duo",
      },
      ExtractedDataField {
        "data": FieldData {
          "confidence": 0.8,
          "coordinates": FieldCoordinates {
            "h": 0.1,
            "page": 2,
            "w": 0.1,
            "x": 0.1,
            "y": 0.1,
          },
          "setIndex": null,
          "sourceBboxCoordinates": Array [
            SourceBboxCoordinates {
              "bboxes": Array [
                Rect {
                  "h": 0.1,
                  "w": 0.1,
                  "x": 0.1,
                  "y": 0.1,
                },
              ],
              "page": 1,
              "sourceId": "dadasdqe",
            },
          ],
          "sourceTableCoordinates": null,
          "sourceTextCoordinates": null,
          "tableCoordinates": null,
          "value": "mock value",
        },
        "fieldPk": 2,
      },
      ExtractedDataField {
        "data": TableData {
          "cells": Array [],
          "columns": Array [],
          "coordinates": Object {
            "h": 0.1,
            "page": 1,
            "w": 0.1,
            "x": 0.1,
            "y": 0.1,
          },
          "meta": null,
          "paginatedRows": null,
          "rows": Array [],
          "setIndex": null,
          "sourceBboxCoordinates": Array [
            SourceBboxCoordinates {
              "bboxes": Array [
                Rect {
                  "h": 0.1,
                  "w": 0.1,
                  "x": 0.1,
                  "y": 0,
                },
              ],
              "page": 1,
              "sourceId": "c626d5ee3c964e31aaf2e2c7170823ba",
            },
          ],
          "sourceTableCoordinates": null,
          "tableCoordinates": null,
        },
        "fieldPk": 3,
      },
      ExtractedDataField {
        "data": Array [
          TableData {
            "cells": Array [],
            "columns": Array [],
            "coordinates": Object {
              "h": 0.1,
              "page": 2,
              "w": 0.1,
              "x": 0.1,
              "y": 0.1,
            },
            "meta": null,
            "paginatedRows": null,
            "rows": Array [],
            "setIndex": null,
            "sourceBboxCoordinates": Array [
              SourceBboxCoordinates {
                "bboxes": Array [
                  Rect {
                    "h": 0.1,
                    "w": 0.1,
                    "x": 0.1,
                    "y": 0,
                  },
                ],
                "page": 1,
                "sourceId": "dadasdqe",
              },
            ],
            "sourceTableCoordinates": null,
            "tableCoordinates": null,
          },
        ],
        "fieldPk": 4,
      },
      Object {
        "data": Object {
          "confidence": 0.69,
          "coordinates": Object {
            "h": 58,
            "page": NaN,
            "w": 412,
            "x": 966,
            "y": 403,
          },
          "setIndex": null,
          "sourceBboxCoordinates": null,
          "sourceTableCoordinates": null,
          "sourceTextCoordinates": null,
          "tableCoordinates": null,
          "value": "328",
        },
        "fieldPk": 1,
      },
      Object {
        "data": Object {
          "confidence": 0.69,
          "coordinates": Object {
            "h": 58,
            "page": NaN,
            "w": 412,
            "x": 966,
            "y": 403,
          },
          "setIndex": null,
          "sourceBboxCoordinates": null,
          "sourceTableCoordinates": null,
          "sourceTextCoordinates": null,
          "tableCoordinates": null,
          "value": "328",
        },
        "fieldPk": 2,
      },
      Object {
        "data": Object {
          "confidence": 0.69,
          "coordinates": Object {
            "h": 58,
            "page": NaN,
            "w": 412,
            "x": 966,
            "y": 403,
          },
          "setIndex": null,
          "sourceBboxCoordinates": null,
          "sourceTableCoordinates": null,
          "sourceTextCoordinates": null,
          "tableCoordinates": null,
          "value": "328",
        },
        "fieldPk": 3,
      },
    ],
    "files": Array [
      Object {
        "blobName": "0.jpg",
        "url": "http://localhost:8003/api/v1/storage/file/0.jpg",
      },
      Object {
        "blobName": "1.jpg",
        "url": "http://localhost:8003/api/v1/storage/file/1.jpg",
      },
    ],
    "groupInfo": undefined,
    "initialDocumentData": undefined,
    "labels": Array [
      Label {
        "_id": "mockLabelId1",
        "name": "mock Label Name 1",
      },
      Label {
        "_id": "mockLabelId2",
        "name": "mock Label Name 2",
      },
    ],
    "language": "eng",
    "previewDocuments": Object {
      "1": Object {
        "blobName": "test/preview/0.png",
        "url": "http://localhost:8003/api/v1/storage/file/test/preview/0.png",
      },
      "2": Object {
        "blobName": "test/preview/1.png",
        "url": "http://localhost:8003/api/v1/storage/file/test/preview/1.png",
      },
    },
    "processingDocuments": Object {
      "1": Object {
        "blobName": "test/processing/0.png",
        "url": "http://localhost:8003/api/v1/storage/file/test/processing/0.png",
      },
      "2": Object {
        "blobName": "test/processing/1.png",
        "url": "http://localhost:8003/api/v1/storage/file/test/processing/1.png",
      },
    },
    "reviewer": DocumentReviewer {
      "email": "test@example.com",
      "firstName": "John",
      "id": "123",
      "lastName": "Smith",
    },
    "state": "inReview",
    "title": "Mock Title.pdf",
    "unifiedData": Object {
      "1": Array [
        Object {
          "appliedTransformation": Object {
            "name": "rotation",
            "parameters": Object {
              "args": Array [],
              "kwargs": Object {
                "angle": 0,
              },
            },
          },
          "blobName": "test/preview/0.png",
          "height": 3509,
          "id": "c626d5ee3c964e31aaf2e2c7170823ba",
          "originalImageId": null,
          "page": 1,
          "width": 2480,
        },
        Object {
          "id": "asdasdasd123asd",
          "page": 1,
          "wordboxes": Array [
            UnifiedDataWord {
              "bbox": Rect {
                "h": 0.4,
                "w": 0.3,
                "x": 0.1,
                "y": 0.2,
              },
              "word": UnifiedDataWordContent {
                "confidence": 1,
                "content": "test",
              },
            },
          ],
        },
        Object {
          "id": "1234",
          "page": 1,
        },
        Object {
          "id": "4321",
          "page": 1,
        },
        Object {
          "id": "f999d5ee3c964e31aaf2e2c7170823ba",
          "page": 1,
        },
        Object {
          "cells": Array [],
          "id": "tableSourceId",
          "maxColumn": 0,
          "maxRow": 0,
        },
      ],
      "2": Array [
        Object {
          "appliedTransformation": Object {
            "name": "rotation",
            "parameters": Object {
              "args": Array [],
              "kwargs": Object {
                "angle": 0,
              },
            },
          },
          "blobName": "test/preview/1.png",
          "height": 3509,
          "id": "dadasdqe",
          "originalImageId": null,
          "page": 2,
          "width": 2480,
        },
        Object {
          "id": "asdasdsdfgsg32asd123asd",
          "page": 2,
          "wordboxes": Array [
            UnifiedDataWord {
              "bbox": Rect {
                "h": 0.4,
                "w": 0.3,
                "x": 0.1,
                "y": 0.2,
              },
              "word": UnifiedDataWordContent {
                "confidence": 1,
                "content": "word",
              },
            },
          ],
        },
      ],
    },
    "validation": Object {
      "detail": Array [
        Object {
          "documentId": "mockId",
          "errors": Array [
            "Test error message",
          ],
          "fieldCode": "glElevation",
          "warnings": Array [
            "Test warning message",
          ],
        },
      ],
      "isValid": true,
    },
  },
  "documentDataFetching": false,
  "documentType": DocumentType {
    "code": "mockDocTypeCode",
    "engine": "mockEngineCode",
    "extractionType": "ml",
    "fields": Array [
      DocumentTypeField {
        "code": "verticalReference",
        "documentTypeCode": "mockDocumentTypeCode",
        "fieldMeta": DocumentTypeFieldMeta {
          "charBlacklist": "BC",
          "charWhitelist": "A",
        },
        "fieldType": "string",
        "name": "Vertical Reference",
        "order": 1,
        "pk": 1,
        "required": false,
      },
      DocumentTypeField {
        "code": "glElevation",
        "documentTypeCode": "mockDocumentTypeCode",
        "fieldMeta": DocumentTypeFieldMeta {
          "charBlacklist": "BC",
          "charWhitelist": "A",
        },
        "fieldType": "string",
        "name": "GL Elevation",
        "order": 2,
        "pk": 2,
        "required": false,
      },
      DocumentTypeField {
        "code": "table",
        "documentTypeCode": "mockDocumentTypeCode",
        "fieldMeta": TableFieldMeta {
          "columns": Array [],
        },
        "fieldType": "table",
        "name": "Table",
        "order": 3,
        "pk": 3,
        "required": false,
      },
      DocumentTypeField {
        "code": "listOfTables",
        "documentTypeCode": "mockDocumentTypeCode",
        "fieldMeta": ListFieldMeta {
          "baseType": "table",
          "baseTypeMeta": undefined,
        },
        "fieldType": "list",
        "name": "List Of Tables",
        "order": 4,
        "pk": 4,
        "required": false,
      },
      DocumentTypeField {
        "code": "fieldCode",
        "documentTypeCode": "mockDocumentTypeCode",
        "fieldMeta": DocumentTypeFieldMeta {
          "charBlacklist": "C",
          "charWhitelist": "A",
        },
        "fieldType": "string",
        "name": "Field Name",
        "order": 5,
        "pk": 5,
        "required": false,
      },
      DocumentTypeField {
        "code": "listOfCheckboxes",
        "documentTypeCode": "mockDocumentTypeCode",
        "fieldMeta": ListFieldMeta {
          "baseType": "checkmark",
          "baseTypeMeta": undefined,
        },
        "fieldType": "list",
        "name": "List Of Checkboxes",
        "order": 6,
        "pk": 6,
        "required": false,
      },
    ],
    "id": undefined,
    "language": "mockLanguageCode",
    "name": "mockDocTypeName",
  },
  "fetching": false,
  "fieldsGrouping": "defined",
}
`;
